--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,11 +23,11 @@
         </ul>
         {% include '_posts.html' %}
     </div>
-    {% if pagination %}
-        <div class="pagination">
-            {{ macros.pagination_widget(pagination, '.index') }}
-        </div>
-    {% endif %}
+{#    {% if pagination %}#}
+{#        <div class="pagination">#}
+{#            {{ macros.pagination_widget(pagination, '.index') }}#}
+{#        </div>#}
+{#    {% endif %}#}
 {% endblock %}
 
 {% block scripts %}
