--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -17,9 +17,8 @@
             <p style="font-size:20px">邮箱:<a href="mailto:{{ user.email }}">{{ user.email }}</a></p>
         {% endif %}
         {% if user.about_me %}<p style="font-size:20px">个人介绍:{{ user.about_me }}</p>{% endif %}
-        <p>注册时间{{ moment(user.member_since).format('L') }}. </p>
-        <p>上一次登录 {{ moment(user.last_since).fromNow() }}.</p>
-        <p>{{ posts.__len__() }} 篇文章.</p>
+
+        {# <!-- <p>{{ posts.__len__() }} 篇文章.</p> --> #}
         <p>
             {% if current_user.can(Permission.FOLLOW) and user != current_user %}
                 {% if not current_user.is_following(user) %}
@@ -29,13 +28,13 @@
                        class="btn btn-default">取消关注</a>
                 {% endif %}
             {% endif %}
-            <a href="{{ url_for('.followers', username=user.username) }}">粉丝: <span
+            {# <!-- <a href="{{ url_for('.followers', username=user.username) }}">粉丝: <span
                     class="badge">{{ ++followers.__len__() }}</span></a>
             <a href="{{ url_for('.following', username=user.username) }}">{{ user.username }}关注的人: <span
                     class="badge">{{ ++following.__len__() }}</span></a>
             {% if current_user.is_authenticated and user != current_user and user.is_following(current_user) %}
                 | <span class="label label-default">他关注了你</span>
-            {% endif %}
+            {% endif %} --> #}
         </p>
         <p>
             {% if user == current_user %}
@@ -47,7 +46,7 @@
         </p>
     </div>
     <h3>{{ user.username }}发布的文章</h3>
-    {% include '_posts.html' %}
+    {# {% include '_posts.html' %} #}
     {% if pagination %}
         <div class="pagination">
             {{ macros.pagination_widget(pagination, '.user', username=user.username) }}
