--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}INnoVation的小站 - 服务器故障,请重试{% endblock %}
+{% block title %}服务器故障,请重试{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
