--- a/app/templates/Link_expired.html
+++ b/app/templates/Link_expired.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}INnoVation的小站 - 此链接已过期{% endblock %}
+{% block title %}此链接已过期{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
