--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}INnoVation的小站 - 验证你的邮箱{% endblock %}
+{% block title %}验证你的邮箱{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
