--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}INnoVation的小站{% endblock %}
+{% block title %}Vulab{% endblock %}
 
 {% block head %}
     {{ super() }}
