--- a/app/templates/403.html
+++ b/app/templates/403.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}INnoVation的小站 - 权限不足{% endblock %}
+{% block title %}权限不足{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
