--- a/app/templates/auth/change_email_request.html
+++ b/app/templates/auth/change_email_request.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}INnoVation的小站 - 修改邮箱地址{% endblock %}
+{% block title %}修改邮箱地址{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>修改邮箱地址</h1>
     </div>
     <div class="col-md-4">
+        {{ form.csrf_token }}
         {{ wtf.quick_form(form) }}
     </div>
 {% endblock %}
