--- a/app/templates/auth/change_password.html
+++ b/app/templates/auth/change_password.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}INnoVation的小站 - 修改密码{% endblock %}
+{% block title %}修改密码{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
