--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}INnoVation的小站 - 登录{% endblock %}
+{% block title %}登录{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>登录</h1>
     </div>
     <div class="col-md-4">
+        {{ form.csrf_token }}
         {{ wtf.quick_form(form) }}
         <br>
         <p>忘记密码? <a href="{{ url_for('auth.password_reset_request') }}">点击找回密码</a>.</p>
