--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}INnoVation的小站 - 注册{% endblock %}
+{% block title %}注册{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>注册</h1>
     </div>
     <div class="col-md-4">
+        {{ form.csrf_token }}
         {{ wtf.quick_form(form) }}
     </div>
 {% endblock %}
