--- a/app/templates/edit_post.html
+++ b/app/templates/edit_post.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}INnoVation的小站 - 编辑文章 {% endblock %}
+{% block title %}编辑文章{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
         <h1>编辑文章</h1>
     </div>
     <div>
+        {{ form.csrf_token }}
         {{ wtf.quick_form(form) }}
     </div>
 {% endblock %}
