--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}INnoVation的小站 - 修改个人资料{% endblock %}
+{% block title %}修改个人资料{% endblock %}
 
 {% block page_content %}
 <div class="page-header">
     <h1>修改个人资料</h1>
 </div>
 <div class="col-md-4">
+    {{ form.csrf_token }}
     {{ wtf.quick_form(form) }}
 </div>
 {% endblock %}
