--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% import "_macros.html" as macros %}
 
-{% block title %}INnoVation的小站-主页{% endblock %}
+{% block title %}Vulab - 主页{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
@@ -10,6 +10,7 @@
     </div>
     <div>
         {% if current_user.can(Permission.WRITE_ARTICLES) %}
+            {{ form.csrf_token }}
             {{ wtf.quick_form(form) }}
         {% endif %}
     </div>
