--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% import "_macros.html" as macros %}
 
-{% block title %}INnoVation的小站 - 个人信息{% endblock %}
+{% block title %}个人信息{% endblock %}
 
 {% block page_content %}
     <div class="page-header">
