--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,9 +27,9 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">账户<b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="{{ url_for('main.user', username=current_user.username) }}">个人信息</a></li>
+                                <li><a href="{{ url_for('auth.user', username=current_user.username) }}">个人信息</a></li>
                                 <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
-                                <li><a href="{{ url_for('auth.change_email_request') }}">修改邮箱</a></li>
+                                {# <li><a href="{{ url_for('auth.change_email_request') }}">修改邮箱</a></li> #}
                                 <li><a href="{{ url_for('auth.logout') }}">登出</a></li>
                             </ul>
                         </li>
