--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,13 +8,13 @@
     <div class="page-header">
         <h1>你好, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}游客{% endif %}!</h1>
     </div>
-    <div>
+    {# <div>
         {% if current_user.can(Permission.WRITE_ARTICLES) %}
             {{ form.csrf_token }}
             {{ wtf.quick_form(form) }}
         {% endif %}
-    </div>
-    <div class="post-tabs">
+    </div> #}
+{#     <div class="post-tabs">
         <ul class="nav nav-tabs">
             <li{% if not show_followed %} class="active"{% endif %}><a href="{{ url_for('.show_all') }}">所有文章</a></li>
             {% if current_user.is_authenticated %}
@@ -22,8 +22,8 @@
                         href="{{ url_for('.show_followed') }}">关注的人</a></li>
             {% endif %}
         </ul>
-        {% include '_posts.html' %}
-    </div>
+    </div> #}
+
 {#    {% if pagination %}#}
 {#        <div class="pagination">#}
 {#            {{ macros.pagination_widget(pagination, '.index') }}#}
